--- a/lang/en.json
+++ b/lang/en.json
@@ -585,7 +585,12 @@
       "SourceItemNotTransformationOrActionCard": "Source item is not a transformation or action card",
       "UnsupportedEmbeddedItemType": "Unsupported embedded item type: {itemType}",
       "UserIsNotGM": "User is not GM",
-      "ItemNotTransformation": "Item is not a transformation"
+      "ItemNotTransformation": "Item is not a transformation",
+      "ActorToTransformationFailed": "Failed to convert actor to transformation",
+      "TransformationToActorFailed": "Failed to convert transformation to actor",
+      "NoActorSelected": "Please select an actor to convert",
+      "NoTransformationSelected": "Please select a transformation to convert",
+      "ActorNotFound": "Could not find the selected actor"
     },
     "Info": {
       "CompendiumItemCreated": "Created {keyType} item {name} in the {packLabel} compendium",
@@ -690,6 +695,7 @@
       "Buttons": {
         "Change": "Change",
         "Close": "Close",
+        "Convert": "Convert",
         "Create": "Create",
         "CreateAndApply": "Create and Apply",
         "Damage": "Damage",
@@ -748,6 +754,12 @@
         "ActionCard": {
           "NoEmbeddedItem": "This action card has no embedded item configured. Please add an item to the action slot before executing.",
           "TargetingError": "You do not have the correct targets selected for this action card."
+        },
+        "Conversion": {
+          "ActorToTransformation": "Convert actor <strong>{actorName}</strong> to a transformation item. This will copy the actor's ability values, combat powers, and action cards.",
+          "TransformationToActor": "Convert transformation <strong>{transformationName}</strong> to an actor. This will create a new actor with the transformation's ability overrides and embedded items.",
+          "ActorToTransformationGeneric": "Select an actor from the world or compendiums to convert into a transformation item. This will copy the actor's ability values, combat powers, and action cards.",
+          "TransformationToActorGeneric": "Select a transformation from the world or compendiums to convert into an actor. This will create a new actor with the transformation's ability overrides and embedded items."
         }
       },
       "ItemSelector": {
@@ -783,12 +795,32 @@
       },
       "AddExisting": "Add Existing Items",
       "Placeholders": {
+        "ActorName": "Actor Name",
         "ChangeValue": "Change Value",
+        "CompendiumId": "world.mycompendium",
         "Description": "Description",
         "Formula": "xdy + z",
         "Label": "Label",
         "Name": "Name",
-        "TransferNote": "Add a note about this transfer"
+        "SelectActor": "Choose an actor to convert...",
+        "SelectTransformation": "Choose a transformation to convert...",
+        "TransferNote": "Add a note about this transfer",
+        "TransformationName": "Transformation Name"
+      },
+      "Labels": {
+        "ActorName": "Actor Name",
+        "ActorType": "Actor Type",
+        "CompendiumId": "Custom Compendium (Optional)",
+        "CreateIn": "Create In",
+        "CreateInWorld": "World Items",
+        "CreateInCompendium": "Compendium Only",
+        "CreateInBoth": "Both World & Compendium",
+        "SelectActor": "Select Actor",
+        "SelectTransformation": "Select Transformation",
+        "TransformationName": "Transformation Name"
+      },
+      "HelpText": {
+        "CompendiumId": "Leave blank to use default compendiums. Format: world.compendiumname"
       }
     },
     "Dialogs": {
@@ -968,6 +1000,7 @@
       "CreateNewActionCard": "Create New Action Card"
     },
     "WindowTitles": {
+      "ActorToTransformation": "Convert Actor to Transformation",
       "ChangeTargetStatus": "Change Target Status",
       "CombatPowerPopup": "Combat Power Details",
       "ConfigureToken": "Configure Token",
@@ -981,7 +1014,8 @@
       "SelectAbilityRoll": "Select Ability Roll",
       "SheetTheme": "Cycle Sheet Theme",
       "StatusPopup": "Status Information",
-      "TransformationCreator": "Transformation Creator"
+      "TransformationCreator": "Transformation Creator",
+      "TransformationToActor": "Convert Transformation to Actor"
     },
     "AriaLabels": {
       "DicePoolValue": "Dice Pool Value",
