Added context menu to action cards on actors to allow them to be moved from group to group easier.

--- a/lang/src/en/ui.json
+++ b/lang/src/en/ui.json
@@ -169,7 +169,10 @@
       "Edit": "Edit",
       "Duplicate": "Duplicate",
       "Delete": "Delete",
-      "SendToChat": "Send to Chat"
+      "SendToChat": "Send to Chat",
+      "MoveToGroup": "Move to Group",
+      "CreateNewGroup": "Create New Group",
+      "SelectGroup": "Select target group"
     }
   }
 }
