--- a/lang/en.json
+++ b/lang/en.json
@@ -1041,7 +1041,10 @@
       "Edit": "Edit",
       "Duplicate": "Duplicate",
       "Delete": "Delete",
-      "SendToChat": "Send to Chat"
+      "SendToChat": "Send to Chat",
+      "MoveToGroup": "Move to Group",
+      "CreateNewGroup": "Create New Group",
+      "SelectGroup": "Select target group"
     }
   },
   "TYPES": {
