--- a/lang/en.json
+++ b/lang/en.json
@@ -192,6 +192,14 @@
         "Apply": "Apply",
         "Discard": "Discard"
       },
+      "New": {
+        "Feature": "New Feature",
+        "CombatPower": "New Combat Power",
+        "Status": "New Status",
+        "Gear": "New Gear",
+        "ActionCard": "New Action Card",
+        "Transformation": "New Transformation"
+      },
       "Colors": {
         "BgColor": {
           "label": "Background Color",
@@ -1044,7 +1052,18 @@
       "SendToChat": "Send to Chat",
       "MoveToGroup": "Move to Group",
       "CreateNewGroup": "Create New Group",
-      "SelectGroup": "Select target group"
+      "SelectGroup": "Select target group",
+      "NoGroupsAvailable": "No groups available. Create a group first.",
+      "CreateActionInGroup": "Create Action Card in Group",
+      "ConvertToStatus": "Convert to Status Effect",
+      "ConvertToFeature": "Convert to Feature",
+      "ConvertConfirm": "Are you sure you want to convert '{name}' from {from} to {to}? This action cannot be undone.",
+      "ConvertSuccess": "Successfully converted '{name}' to {type}",
+      "CreateNewFeature": "Create New Feature",
+      "CreateNewCombatPower": "Create New Combat Power",
+      "CreateNewStatus": "Create New Status",
+      "CreateNewGear": "Create New Gear",
+      "CreateNewActionCard": "Create New Action Card"
     }
   },
   "TYPES": {
