--- a/lang/src/en/item.json
+++ b/lang/src/en/item.json
@@ -1,6 +1,14 @@
 {
   "EVENTIDE_RP_SYSTEM": {
     "Item": {
+      "New": {
+        "Feature": "New Feature",
+        "CombatPower": "New Combat Power",
+        "Status": "New Status",
+        "Gear": "New Gear",
+        "ActionCard": "New Action Card",
+        "Transformation": "New Transformation"
+      },
       "Colors": {
         "BgColor": {
           "label": "Background Color",
