Added additional items to context menus to make them more valuable to users.

--- a/lang/en.json
+++ b/lang/en.json
@@ -1043,12 +1043,16 @@
       "RemoveFromGroup": "Remove from Group",
       "RenameGroup": "Rename Group",
       "DeleteGroup": "Delete Group",
+      "DuplicateGroup": "Duplicate Group",
       "ExpandAll": "Expand All Groups",
       "CollapseAll": "Collapse All Groups",
       "Execute": "Execute",
       "Edit": "Edit",
       "Duplicate": "Duplicate",
       "Delete": "Delete",
+      "DeleteConfirm": "Are you sure you want to delete '{name}'?",
+      "DeleteSuccess": "Successfully deleted '{name}'",
+      "DuplicateSuccess": "Successfully duplicated '{name}'",
       "SendToChat": "Send to Chat",
       "MoveToGroup": "Move to Group",
       "CreateNewGroup": "Create New Group",
