--- a/lang/src/en/actor.json
+++ b/lang/src/en/actor.json
@@ -45,6 +45,7 @@
       "Tabs": {
         "CombatPowers": "Combat Powers",
         "ActionCards": "Action Cards",
+        "GmActionCards": "GM Actions",
         "Biography": "Biography",
         "Features": "Features",
         "Gear": "Gear",
