--- a/lang/src/en/item.json
+++ b/lang/src/en/item.json
@@ -56,6 +56,12 @@
         "Ability": {
           "label": "Ability"
         },
+        "FirstAbility": {
+          "label": "First Ability"
+        },
+        "SecondAbility": {
+          "label": "Second Ability"
+        },
         "Bonus": {
           "label": "Bonus"
         },
@@ -159,6 +165,9 @@
         "TransformationConfig": "Transformation Configuration",
         "TransformationCondition": "Apply Transformations",
         "TransformationThreshold": "Transformation Threshold",
+        "StatusEffectSelection": "Select Status Effects to Apply",
+        "SelectAllEffects": "Select All",
+        "DeselectAllEffects": "Deselect All",
         "TransformationSelection": "Select Transformations",
         "NoTransformation": "No Transformation",
         "NoTargetsForTransformation": "No targets selected for transformation selection.",
