Additional scaffolding to support mixed roll formulas and status effect selective application.

--- a/lang/src/en/abilities.json
+++ b/lang/src/en/abilities.json
@@ -18,7 +18,8 @@
     "RollTypes": {
       "Flat": "Flat",
       "None": "None",
-      "Roll": "Roll"
+      "Roll": "Roll",
+      "MixedRoll": "Mixed Roll"
     },
     "ClassNames": {
       "Weapon": "Weapon",
