--- a/docs/release-notes/v13.18.1.md
+++ b/docs/release-notes/v13.18.1.md
@@ -10,127 +10,22 @@
 
 #### Key Improvements
 
-- **Mixed Attribute Rolls**: Added a new "Mixed Attribute" type of roll for combat powers and action cards that let you take the average of 2 stats for an action.
+- **Mixed Attribute Rolls**: Added a new "Mixed Attribute" type of roll for combat powers and action cards that let you take the average of 2 stats for an action. This is particularly useful in situations like a vampire choosing between drinking blood and kissing, where the action may be "half strength, half charisma."
 - **Status Effect Fix**: Fixed a bug where status effects, if they weren't applied in the first action of an action chain, wouldn't ever apply.
 - **Selective Status Application**: Added a new way of selecting which status will apply on any given use of an action chain so that status effects can be selectively applied by the GM.
 
 #### Mixed Attribute Rolls
 
-This new roll type allows you to combine two attributes to create a more balanced action. For example, you could use the average of your Strength and Dexterity for a precision-based attack.
+This new roll type allows you to combine two attributes to create a more balanced action. For example:
+- A vampire might roll the average of their Strength and Charisma for a "vampiric kiss" action.
+- A rogue might use the average of Dexterity and Intelligence for a "trick" action.
+
+The result is always rounded **up**, ensuring that the action is slightly more powerful than either attribute alone.
 
 #### Status Effect Fix
 
-Previously, status effects would only apply if they were used in the first action of an action chain. This fix ensures that status effects can be applied at any point in the chain, providing more flexibility in combat.
+Previously, status effects would only apply if they were used in the first action of an action chain. This fix ensures that status effects can be applied at any point in the chain, providing more flexibility in combat and other scenarios.
 
 #### Selective Status Application
 
-GMs can now choose which status effects will apply on any given use of an action chain. This gives you more control over how your actions affect the game, allowing for more strategic gameplay.
-
-## Improvements
-
-### User Experience
-
-- **Intuitive Interface**: The new features are seamlessly integrated into the existing UI, making them easy to use and understand.
-- **Seamless Workflow**: The changes work naturally with existing workflows, ensuring a smooth transition for all users.
-- **Visual Feedback**: Clear indicators show when status effects are applied, helping you keep track of the game state.
-
-### Code Quality
-
-- **Clean Architecture**: The new features are implemented with clean code, maintaining the high standards of the existing system.
-- **Proper Separation**: The changes are properly isolated, ensuring they don't affect existing functionality.
-- **Type Safety**: Full documentation for new fields and methods, ensuring type safety and clarity.
-- **Performance**: The changes have no impact on rendering or execution speed, ensuring optimal performance.
-
-## Version Information
-
-- **Release Version**: 13.18.1
-- **Foundry Compatibility**: v13+ minimum, v13+ verified
-- **Previous Version**: v13.18.0 introduced GM Action Cards with complete player isolation
-- **Focus**: Enhanced Action Chain Control with new roll types and status effect management
-
-## Getting Started
-
-### For Game Masters
-
-- **GM Can Create Action Cards**: Game Masters can now create and manage action cards that are completely hidden from players. (V13.18.0)
-- **GM Can Select Which Status To Apply If Any During Action Card Roll**: This should allow for situations where you do want to roll the damage section from an action chain without triggering its status effects.
-
-### For Players
-
-- **Players Can Use New Execution Flow For Status Effects**: The same as you would for normal actions, just select which status effect to apply.
-- **Mixed Attribute Rolls**: Players can now roll mixed attributes, which is useful for complex combat situations where something is "half acrobatics, half wits" or something along those lines.
-
-### Best Practices
-
-**Organization**
-
-- Use the new features for more complex action chains and status effect management
-- Use the new features for more complex combat situations
-- Leverage action card groups to organize your action chains and status effects
-
-### Security
-
-**Performance**
-
-- Improved execution of action chains and status effects to better align with their expected action flow.
-
-## Technical Notes
-
-### Architecture Decisions
-
-**Action Chain Execution Flow**
-
-Action chains were always intended to inflict status on first success: this has slipped through the cracks a few times but we've added checks to ensure they always follow the rules and status effects can apply correctly if they're triggered.
-
-**Status Effect Application At Rolltime**
-
-Status effects can now contain many statuses but be narrowed down at rolltime to provide a particular status: great for players who enjoy images that feature their character on status effects.
-
-### Schema Changes
-
-### Modified Files
-
-**Data Models**
-
-- `module/data/item-action-card.mjs` - Added mixedAttribute and selectiveStatus fields to schema
-
-**UI Sheets**
-
-- `module/ui/popups/action-card-popup.mjs` - Backend work for new UI elements for selective status application.
-
-**Templates**
-
-- `templates/item/attribute-parts/combat-powers.hbs` - Added new UI elements for mixed attribute rolls.
-- `templates/macros/popups/action-card.hbs` - Updated for selective status application.
-
-**Document Mixins**
-
-- `module/documents/mixins/item-action-card-execution.mjs` - Updated to handle new features.
-
-**Localization**
-
-- `lang/src/en/item-action-card.mjs` - Updated to include new localization strings
-- `lang/en.json` - Rebuilt to include new localization strings
-
-## Known Issues
-
-None at this time.
-
-## Documentation
-
-- [Action Cards Guide](../advanced-usage/action-cards.md) - Complete action cards documentation
-- [Quick Start Guide](../getting-started/quick-start.md) - Get started with the system
-- [Features System](../system-features/features.md) - Circumstantial bonuses and feature rolls
-
-## Migration Notes
-
-**From v13.18.0 to v13.18.1**
-
-- No migration required
-- Existing action cards continue working since roll type default on combat powers still.
-- New UI elements appear automatically for users: new roll type available to existing or new cards
-- No data conversion or manual updates needed
-
----
-
-**Current Version**: v13.18.1 | **Foundry VTT Compatibility**: v13+ | **Release Date**: January 2026
+GMs can now choose which status effects will apply on any given use of an action chain. This is especially useful in cases where multiple statuses have the same underlying mechanics but different visual or narrative effects (e.g., "drinking blood" vs. "kissing" in the case of a vampire). This feature allows the GM to maintain narrative consistency while still providing variety in gameplay.
