Updated release notes to include commits for migration tweaks.

--- a/docs/release-notes/v13.19.1.md
+++ b/docs/release-notes/v13.19.1.md
@@ -26,6 +26,11 @@
 
 ## Commits
 
+- `c2257ed` Added migration version to performance dashboard.
+- `c33e8bf` Final fix for migration of statusOnSuccess: migration system now more robust for future migrations.
+- `83d14c2` Part of build changed to single quotes for display fonts: must have been an scss library update.
+- `577235b` Chore: updated translation strings for migration system.
+- `754d947` Chore: update release notes.
 - `092de8f` Jest update for new fields testing
 - `b96c2af` Added console override line and removed unused field. Closes Improper Migration Fixes #133
 - `c6b94a7` Fixed a few areas where old status per success field was still present or new field caused bugs. Closes Sudden Jump Fixes #132
