--- a/lang/src/en/settings.json
+++ b/lang/src/en/settings.json
@@ -118,6 +118,15 @@
     "NoPlayerPermission": "Players do not have permission to change sound settings.",
 
     "TestingModeName": "Testing Mode",
-    "TestingModeHint": "Enable or disable testing mode console logging for debugging."
+    "TestingModeHint": "Enable or disable testing mode console logging for debugging.",
+
+    "MinimumDiceValueName": "Minimum Dice Value",
+    "MinimumDiceValueHint": "The minimum value that can be rolled on a dice check",
+    "MaxPowerFormulaName": "Max Power Formula",
+    "MaxPowerFormulaHint": "Formula to calculate the maximum power for an actor. Default: max(5 + @will.total + @fort.total, 1). Leave empty to set max power manually per actor.",
+    "MaxResolveFormulaName": "Max Resolve Formula",
+    "MaxResolveFormulaHint": "Formula to calculate the maximum resolve for an actor. Default: max(100 + (10 * @fort.total), 10). Leave empty to set max resolve manually per actor.",
+    "ActionCardExecutionLimitName": "Action Card Execution Limit",
+    "ActionCardExecutionLimitHint": "Maximum number of action cards that can be executed per turn"
   }
 }
