Point total reminders in the form of the stat total box changing colors.

--- a/lang/src/en/settings.json
+++ b/lang/src/en/settings.json
@@ -128,6 +128,9 @@
     "MaxResolveFormulaName": "Max Resolve Formula",
     "MaxResolveFormulaHint": "Formula to calculate the maximum resolve for an actor. Default: max(100 + (10 * @fort.total), 10).",
     "MaxResolveFormulaWarning": "Max Resolve formula cannot be empty. Resetting to default.",
+    "StatPointsFormulaName": "Stat Points Formula",
+    "StatPointsFormulaHint": "Formula to calculate the maximum stat points for a character. Use @lvl.value for level. Set to '0' to disable color coding. Default: 14 + (2 * @lvl.value).",
+    "StatPointsFormulaWarning": "Stat Points formula cannot be empty. Resetting to default.",
     "MinimumPowerValueName": "Minimum Power Value",
     "MinimumPowerValueHint": "The minimum value that an actor's max power can be. Applies after percentage multipliers.",
     "MinimumPowerValueWarning": "Minimum Power Value must be a non-negative integer. Resetting to default ({0}).",
